# QA_Self_healing_package

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aegisai/: __init__.py  __main__.py  artifacts.py  auto.py  cache.py  drift.py  dry_run.py  main.py  models.py  playwright.py  playwright_async.py  pytest_plugin.py  reporting.py  sdk.py  selenium.py  state.py  unittest_integration.py
aegisai/engine/: __init__.py  autonomous_healer.py  code_reader.py  confidence.py  deterministic.py  healing_orchestrator.py  heuristic_searcher.py  js_prober.py  llm.py  locator_translator.py  universal_llm_adapter.py
aegisai/guardrails/: __init__.py  flow_check.py  validator.py
aegisai/interceptor/: __init__.py  base_interceptor.py  playwright_listener.py  selenium_listener.py
aegisai/memory/: __init__.py  loader.py  merger.py  writer.py
aegisai/persistence/: __init__.py  ast_rewrite.py  git_pr.py  ide_notify.py  suggestions.py
aegisai/security/: __init__.py  audit.py  officer.py  policy.py  redactor.py
aegisai/utils/: config.py  dom_parser.py  llm_config.py  logger.py
examples/: aegisai_quickstart.ipynb  behave_environment.py  ci_cd_usage.md  login.html  playwright_async_quickstart.py  playwright_page_object.py  playwright_quickstart.py  pytest_fixture_example.py  robot_framework_example.robot  security_policy.toml  selenium_quickstart.py  unittest_page_object_selenium.py
public repos/: README.md  REAL_WORLD_FINDINGS.md
public repos/scripts/: clone_public_repos.ps1  run_public_repo_reliability.ps1
tests/: test_core.py
tests/fixtures/: common_ui_patterns.html
tests/reliability/: __init__.py  conftest.py  test_public_repo_playwright.py  test_public_repo_selenium.py
